--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
   <scope>test</scope>
 </dependency>
 
-	<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
-    <groupId>com.relevantcodes</groupId>
+    <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>2.41.2</version>
+    <version>5.0.9</version>
 </dependency>
 	
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
